<resources>
    <string name="app_name">Logic University Stationery Store</string>
    <string name="login_email">Enter email address</string>
    <string name="login_pass">Enter password</string>
    <string name="requisition_list">Requisition List</string>
    <string name="requisition_form">Generate Requisition Form</string>
    <string name="retrieval_list">Retrieval List</string>
    <string name="disbursement">Disbursement</string>
    <string name="discrepancy">Report Discrepancies</string>
    <string name="adhoc_discrepancy">Adhoc Discrepancy</string>
    <string name="monthly_inventory">Monthly Inventory Check</string>
    <string name="update_dep">Department Details</string>
    <string name="quantity">Quantity</string>
    <string name="reqDate">Requested Date: </string>
    <string name="reqBy">Requested By: </string>
    <string name="des">Description: </string>
    <string name="qty">Requested Qty: </string>
    <string name="uom">Unit of measure: </string>
    <string name="title">Item Requested </string>
    <string name="btnApprove">Approve</string>
    <string name="btnReject">Reject</string>
    <string name="btnSave">Save</string>
    <string name="m">(</string>
    <string name="n">)</string>
    <string name="reqList">Requisition List</string>
    <string name="deptInfo">Department Info.</string>
    <string name="fragment_title">Do you have any remark for this requisition? </string>
    <string name="spinner_title">Choose One </string>
    <string name="update_dr">Update Department Rep</string>
    <string name="update_cp">Update Collection Point</string>
    <string name="logout">Logout</string>
    <string name="deptCode">Department Code</string>
    <string name="deptname">Department Name</string>
    <string name="headname">Head Name</string>
    <string name="collectpoint">Collection Point</string>
    <string name="contactname">Contact Name</string>
    <string name="phone">Telephone</string>
    <string name="fax">Fax</string>
    <string name="drep">Department Rep</string>
    <string name="txtEmail">Enter email (name@logicuniversity.com)</string>
    <string name="txtPassword">Enter password</string>
    <string name="btnLogin">Login</string>
    <string name="depName">Department Name: </string>
    <string name="btnGenerate">Generate</string>
    <string name="btnCancel">Cancel</string>
    <string name="reqQty">Requested Quantity</string>
    <string name="actQty">Actual Quantity</string>
    <string name="remark">Remark</string>
    <string name="disbDate">Disbursement Date: </string>
    <string name="disbTime">Disbursement Time: </string>
    <string name="colPoint">Collection Point: </string>
    <string name="accessCode">Enter Access Code</string>
    <string name="btnAck">Acknowledge</string>
    <string name="sfQty">Shortfall Quantity: </string>
    <string name="noReq">No Pending Requisitions</string>
    <string name="deptrep">Department Representative:</string>
    <string name="cp">Collection Point:</string>    
    <string name="disbList">Disbursement List</string>
    <string name="lstItem">Item List</string>
</resources>
