<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
   <!-- android:orientation="vertical"-->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:layout_marginEnd="267dp"
        android:layout_marginRight="267dp"
        android:width="20dp"
        android:text="@string/qty" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:layout_toRightOf="@+id/textView7"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"

        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/m" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"

        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/n" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"

        android:text="@string/uom"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_toEndOf="@+id/textView9"
        android:layout_toRightOf="@+id/textView9"
        android:textSize="14sp" />
</RelativeLayout>