<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtActingHead"
        android:layout_width="316dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Department Detail Info"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@android:color/black"
        tools:textSize="30sp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/thumbnail_height">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="149dp"
                android:layout_height="40dp"
                android:text="@string/deptname"
                style="@style/TitleStyle" />

            <TextView
                android:id="@+id/txtDeptName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/contactname"
                style="@style/TitleStyle"/>

            <TextView
                android:id="@+id/txtContactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/phone"
                style="@style/TitleStyle"/>

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/fax"
                style="@style/TitleStyle"/>

            <TextView
                android:id="@+id/txtFax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/headname"
                style="@style/TitleStyle"/>

            <TextView
                android:id="@+id/txtHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewdr"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:text="@string/drep"
                style="@style/TitleStyle"/>

            <TextView
                android:id="@+id/txtDeptRep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/collectpoint"
                style="@style/TitleStyle"/>

            <TextView
                android:id="@+id/txtCollectPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle" />
        </TableRow>


    </TableLayout>


</android.support.constraint.ConstraintLayout>
